Fixed like bug, fixed stretching of profile picture in notification

--- a/client/src/components/notification/style.css
+++ b/client/src/components/notification/style.css
@@ -22,6 +22,7 @@
     border-radius: 50px;
     margin-left: 10px;
     color: rgb(165, 165, 165);
+    object-fit: cover;
 }
 .notification-detail{
     margin-left: 10px;
